<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center|top"
    android:orientation="vertical"
    android:tileMode="repeat" >

    <RelativeLayout
        android:id="@+id/rHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include
            android:id="@+id/header"
            layout="@layout/activity_header" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rFooter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp" >

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="1dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:contentDescription="@string/title_live"
                        android:gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/title_about" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="Tahoma"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:lineSpacingExtra="16sp"
                    android:padding="5dp"
                    android:text="@string/about_us_text_1"
                    android:textColor="#ffffff"
                    android:textSize="24sp" />
                
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="Tahoma"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:lineSpacingExtra="16sp"
                    android:padding="5dp"
                    android:text="@string/about_us_text_2"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />
                
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="Tahoma"
                    android:gravity="right"
                    android:layoutDirection="rtl"
                    android:lineSpacingExtra="16sp"
                    android:padding="5dp"
                    android:text="@string/about_us_text_3"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
                
                <ImageView
                    android:id="@+id/slogo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/faragostaresh"
                    android:gravity="center"
                    android:src="@drawable/slogo" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="Tahoma"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:lineSpacingExtra="16sp"
                    android:padding="2dp"
                    android:text="@string/about_us_text_4"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/faragostaresh"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/faragostaresh"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:src="@drawable/faragostaresh" />
            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/footer"
            layout="@layout/activity_footer" />
    </RelativeLayout>

</LinearLayout>