<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center|top"
    android:orientation="vertical"
    android:tileMode="repeat" >

    <RelativeLayout
        android:id="@+id/rHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include
            android:id="@+id/header"
            layout="@layout/activity_header" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rFooter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="1dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:contentDescription="@string/title_live"
                        android:gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/title_contact" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="Tahoma"
                        android:gravity="right"
                        android:text="@string/name"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#222222" />

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="5dp" >
                    </EditText>

                    <TextView
                        android:id="@+id/textViewEmail"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="Tahoma"
                        android:gravity="right"
                        android:text="@string/email"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#222222" />

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" >
                    </EditText>

                    <TextView
                        android:id="@+id/textViewSubject"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="Tahoma"
                        android:gravity="right"
                        android:text="@string/subject"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#222222" />

                    <EditText
                        android:id="@+id/editTextSubject"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" >
                    </EditText>

                    <TextView
                        android:id="@+id/textViewMessage"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="Tahoma"
                        android:gravity="right"
                        android:text="@string/message"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#222222" />

                    <EditText
                        android:id="@+id/editTextMessage"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:lines="5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/sendemail_intent"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="Tahoma"
                        android:gravity="center"
                        android:text="@string/btnsend"
                        android:textColor="#222222" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/footer"
            layout="@layout/activity_footer" />
    </RelativeLayout>

</LinearLayout>